[package]
name = "newgrounds-audio-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.61", features = ["backtrace"] }
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
# url = "2.2.2"
