[package]
name = "newgrounds-audio-downloader"
version = "0.1.0"
edition = "2021"
license = "SSPL-1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.61", features = ["backtrace"] }
backoff = "0.4.0"
derive_builder = { version = "0.11.2", features = ["clippy"] }
ego-tree = "0.6.2"
httpdate = "1.0.2"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
scraper = { version = "0.13.0", features = ["deterministic"] }
seahash = { version = "4.1.0", features = ["use_std"] }
serde = { version = "1.0.143", features = ["serde_derive"] }
serde_json = "1.0.83"
# time = { version = "0.3.13", features = ["serde"] }
# url = "2.2.2"

[features]
just_print_all_nodes = []
